# mathcad2smath

./: .gitignore  README.md  XMCD2SM.spec  build.bat  converter.py  create_exe.bat  custom.sm  custom_mathcad_function.py  installer_setup.iss  local_build.py  mathcad2smath.py  setup.cfg
mathcad2smath/: converter.py
src/mathcad2smath/: converter.py  custom_mathcad_functions.py  mathcad2smath.py
src/mathcad2smath/app/: app.py  app.ui
src/mathcad2smath/core/: templates.py
src/mathcad2smath/core/converters/: ifthen.py  inline_operations.py  link.py  sequence_to_matrix.py  summation.py
src/mathcad2smath/core/utils/: __init__.py  utils.py
