[metadata]
name = mathcad2smath
version = 1.5
author = André Ginklings
author_email = andre.ginklings@gmail.com
description = This module convert XMCD mathcad files in XMCD compatible with Smath Studio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ginklings/mathcad2smath
project_urls =
    Bug Tracker = https://github.com/Ginklings/mathcad2smath/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
exclude = mathcad2smath.__pycache__

[options.entry_points]
console_scripts =
    mathcad2smath = mathcad2smath.mathcad2smath:main
